<resources>
    <string name="app_name">shopApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in_title">Sign in</string>
    <string name="hint_first_name">First name</string>
    <string name="hint_last_name">Last name</string>
    <string name="hint_email">email</string>
    <string name="button_sign_in">Sign in</string>
    <string name="text_already_have_an_account">Already have an account?</string>
    <string name="login_link">Login</string>
    <string name="text_sign_in_with_google">Sign in with Google</string>
    <string name="text_sign_in_with_apple">Sign in with Apple</string>
    <string name="text_view_login_title">Welcome back</string>
    <string name="edit_text_hint_password">Password</string>
    <string name="button_login">Login</string>
    <string name="page_main_toolbar_title">Trade by <font color='#FF4E55D7'>bata</font></string>
    <string name="edit_text_main_page_looking_for">What are you looking for?</string>
    <string name="button_search">Search</string>
    <string name="phones">Phones</string>
    <string name="headphones">Headphones</string>
    <string name="games">Games</string>
    <string name="cars">Cars</string>
    <string name="furniture">Furniture</string>
    <string name="kids">Kids</string>
    <string name="main_page_latest">Latest</string>
    <string name="button_view_all">View all</string>
    <string name="main_page_flash_sale">Flash Sale</string>
</resources>