<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.views.SignInFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewSignInTitle"
            style="@style/TextViewTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/sign_in_title" />

        <EditText
            android:id="@+id/editTextFirstName"
            style="@style/EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_first_name"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/editTextLastName"
            style="@style/EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_last_name"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/editTextEmail"
            style="@style/EditText"
            android:layout_width="match_parent"
            android:layout_height="29dp"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            tools:ignore="TouchTargetSizeCheck" />

        <Button
            android:id="@+id/buttonSignIn"
            style="@style/Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_sign_in" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp"
            android:layout_marginStart="43dp"
            android:layout_marginEnd="43dp"
            android:layout_marginBottom="32dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_light"
                android:text="@string/text_already_have_an_account"
                android:textColor="@color/text_color_grey"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/textViewLoginLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_light"
                android:text="@string/login_link"
                android:textColor="@color/text_color_link"
                android:textSize="10sp"
                android:paddingStart="5dp"/>

        </LinearLayout>

        <TextView
            android:id="@+id/textViewSignInWithGoogle"
            style="@style/TextViewSignInWith"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/google_icon"
            android:text="@string/text_sign_in_with_google"/>

        <TextView
            android:id="@+id/textViewSignInWithApple"
            style="@style/TextViewSignInWith"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/apple_icon"
            android:text="@string/text_sign_in_with_apple"/>


    </LinearLayout>

</FrameLayout>