<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.views.LoginFragment">

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="vertical">

       <TextView
           style="@style/TextViewTitle"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/text_view_login_title"/>

       <EditText
           android:id="@+id/editTextLoginFirstName"
           style="@style/EditText"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:hint="@string/hint_first_name"
           tools:ignore="TouchTargetSizeCheck" />

       <com.google.android.material.textfield.TextInputLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           app:passwordToggleTint="@color/edit_text_color"
           app:passwordToggleEnabled="true"
           app:boxStrokeWidth="0dp"
           app:boxStrokeWidthFocused="0dp">

           <com.google.android.material.textfield.TextInputEditText
               android:id="@+id/editTextLoginPassword"
               style="@style/EditText"
               android:layout_width="match_parent"
               android:layout_height="29dp"
               android:drawablePadding="-38dp"
               android:hint="@string/edit_text_hint_password"
               android:inputType="textPassword" />

       </com.google.android.material.textfield.TextInputLayout>

       <Button
           android:id="@+id/buttonLogin"
           style="@style/Button"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/button_login"
           android:layout_marginTop="99dp"/>

   </LinearLayout>

</FrameLayout>